# streamlit-stockPrice

./: .env.sample  .gitignore  README.md  app.py  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
components/: sidebar.py
database/: database.py
misc/: 02_webRTC.py
pages/: 01_Japan-stock.py  01_uesr-auth.py  02_Japan-stock.py  02_Login-Page.py  03_Custom-Stock-List.py  04_Contact_me.py
router/: __init__.py
services/: auth.py  submit_form.py
src/: .secrets.yaml.sample  app.py  config.py  style.css
src/database/: database.py
src/router/: router.py
src/services/: StockAnalyzer.py
src/views/: __init__.py  custom_stock_list_page.py  data_viewer_page.py  qrcode_page.py  us_stock_page.py
utils/: auth.py
views/: __init__.py  contact_me_page.py  custom_stock_list_page.py  japan_stock_page.py  login_page.py  qrcode_page.py  us_stock_page.py
