[project]
name = "streamlit-stockprice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "faker>=37.1.0",
    "jaconv>=0.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "prophet>=1.1.6",
    "pyjwt>=2.10.1",
    "qrcode>=8.1",
    "setuptools>=79.0.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "streamlit-aggrid>=1.1.3.post1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-cookies-controller>=0.0.4",
    "streamlit-extras>=0.6.0",
    "streamlit-on-hover-tabs>=1.0.1",
    "tinydb>=4.8.2",
    "validators>=0.34.0",
    "yfinance>=0.2.55",
]
